# SeyedKhande

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: AghaShahriar.h  AminEmeni.h  BigTaha.h  DaniGolang.h  GameManager.h  GameTypes.h  Hero.h  PouyaKazhDam.h  SmallTaha.h  WhiteDoctor.h
src/: AghaShahriar.cpp  AminEmeni.cpp  BigTaha.cpp  DaniGolang.cpp  GameManager.cpp  Hero.cpp  PouyaKazhDam.cpp  SmallTaha.cpp  WhiteDoctor.cpp
